Adicionando configurações do Docker e Nuvem